add description interface web

--- a/features.html
+++ b/features.html
@@ -125,7 +125,7 @@
         <div class="row align-items-center">
           <div class="col-md-4 me-auto">
             <h2 class="mb-4">Banque de sang</h2>
-            <p class="mb-4">L'application offre à la banque de sang des outils avancés pour digitaliser et optimiser l'ensemble de ses opérations. 
+            <p class="mb-4">L'application offre à la banque de sang une interface web avec des outils avancés pour digitaliser et optimiser l'ensemble de ses opérations. 
               Tout d'abord, elle leur permet de constituer et gérer une base de données centralisée référençant l'ensemble des donneurs et receveurs 
               inscrits sur la plateforme. Les fiches membres sont facilement consultables, modifiables. La banque dispose également d'un calendrier collaboratif pour planifier ses collectes mobiles et fixes, 
               informer automatiquement les donneurs concernés.  
@@ -143,7 +143,7 @@
         <div class="row align-items-center">
           <div class="col-md-4 ms-auto order-2">
             <h2 class="mb-4"> Hôpital </h2>
-            <p class="mb-4">L'application permet de commander facilement et en toute sécurité les poches de sang dont  les hôpitaux ont besoin pour leurs patients. 
+            <p class="mb-4">L'interface web permet de commander facilement et en toute sécurité les poches de sang dont  les hôpitaux ont besoin pour leurs patients. 
               Grâce au catalogue en ligne interconnecté avec les stocks des banques partenaires, vous pouvez consulter en temps réel 
               la disponibilité des différents produits (globules rouges, plasma, plaquettes). Un système d'alerte vous informe des risques 
               de rupture afin d'anticiper au mieux vos commandes. 
